k8s/templates/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels: 
    app: auth
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
