k8s/templates/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mongo
spec:
  clusterIP: None 
  selector:
    app: my-mongo
  ports:
    - port: 27017
      targetPort: 27017
